Alterção de formato de imagens

--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                 <div class="card">
                     <div class="imagem-4"></div>
                     <div class="button">
-                        <h2>JOM KAZA - Contruções de Alto Padrão</h2>
+                        <h2>JOM KAZA - Contruções</h2>
                         <a href="http://jomkazaconstrucoes.com.br/" target="_blank">
                             <button class="btn-orange">Acesse</button>
                         </a>
